<resources>
    <string name="app_name">How Canadian are you?</string>

    <string name="edittext_hint">Answer</string>

    <string name="question1">1. The name \"Canada\" comes from the Iroquois word \"Kanata.\" What does
        that word mean in English?</string>

    <string name="question2">2. What are the official languages of Canada?</string>
    <string name="question3">3. Canada is the second largest country in the world.</string>
    <string name="question4">4. Which biggest Canadian province or territory has the smallest
        number of people living there.</string>
    <string name="question5">5. Most of Ontario\'s Southern border follows a line of lakes called
        "The Great Lakes"\. How many are there?</string>

    <string name="answer1">Village</string>
    <string name="answer2"></string>
    <string name="answer3">True</string>
    <string name="answer4">Nunavut</string>
    <string name="answer5">Five</string>

    <string name="q1c1">Village</string>
    <string name="q1c2">Community</string>
    <string name="q1c3">Freedom</string>

    <string name="q2c1">Ojibway</string>
    <string name="q2c2">English</string>
    <string name="q2c3">Inuktitut</string>
    <string name="q2c4">French</string>

    <string name="q3c1">True</string>
    <string name="q3c2">False</string>

    <string name="q5c1">One</string>
    <string name="q5c2">Two</string>
    <string name="q5c3">Three</string>
    <string name="q5c4">Four</string>
    <string name="q5c5">Five</string>


</resources>
